[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "awesome-package"
version = "1.10.0"
description = "An amazing Python package."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Some Human"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas[pyarrow]>=2.0.0",
    "pydantic>=2.0.0",
    "plotly>=4.0.0",
]

[project.optional-dependencies]
models = [
    "xgboost",
    "torch",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/some-human/awesome-package"

[tool.hatch.build.targets.wheel]
packages = ["awesome-package"]

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
pydocstyle = { convention = 'google' }
